@@ -1,3 +1,4 @@
+- Zenith432 : Add turning off USB legacy for XHCI (XHCILegacyOff)
 - ErmaC : C6 & C7 States credits to Clover Team.
 - ErmaC : define recursive cpu series for BrandString
 - Zenith432 : saio_types.h, biosfn.c - minor typo in bios-defined data structure that isn't actually used.
